--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 djangorestframework = "*"
 django-rest-knox = "*"
 django-cors-headers = "*"
+psycopg = {extras = ["binary"], version = "*"}
 
 [dev-packages]
 
